# Datastrukturer-Algoritmer

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: 1.cpp.5AE9A1D96D82B2F8.idx
1/: 1.cpp  CMakeLists.txt
2/: 2.cpp  CMakeLists.txt
7/: 7.cpp  BinaryHeap.h  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt
Binært_søgetræ/: BinarySearchTree.cpp  BinarySearchTree.h
CriticalPath/: Aktivitet.cpp  Aktivitet.h  Source.cpp
ada_exam/: 2.cpp  CMakeLists.txt
ada_exam/hand-in/: ada_exam.tex
ada_reexam/: 1.cpp  3.cpp  4.cpp  CMakeLists.txt
ada_reexam/hand-in/: ada_exam.tex
exam/: CMakeLists.txt  exam_1.cpp  exam_10.cpp  exam_2.cpp  exam_3.cpp  exam_4.cpp  exam_5.cpp  exam_6.cpp  exam_7.cpp  exam_8.cpp  exam_9.cpp  todo.md
exam/hand-in/: exam.tex
lib/: CMakeLists.txt
port/: CMakeLists.txt  port_1.cpp  port_10.cpp  port_11.cpp  port_3.cpp  port_4.cpp  port_6.cpp  port_7.cpp
port/hand-in/: port1.tex
port1/: port_4.cpp  port_7.cpp
port1/hand-in/: port1.tex
port1/test/: port1.tex
port2/: BinarySearchTree.cpp  BinarySearchTree.h  BinarySearchTree_1.cpp  CMakeLists.txt  port_1.cpp  port_2.cpp
port2/hand-in/: port2.tex
template/: CMakeLists.txt  nb.cpp
tests/: CMakeLists.txt  heap.cpp  heap_aktivity.cpp  test1.cpp
