add_executable(port_1 port_1.cpp)
target_compile_options(port_1 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_2 port_2.cpp)
target_compile_options(port_2 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_3 port_3.cpp)
target_compile_options(port_3 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_4 port_4.cpp)
target_compile_options(port_4 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_5 port_5.cpp)
target_compile_options(port_5 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_6 port_6.cpp)
target_compile_options(port_6 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_7 port_7.cpp)
target_compile_options(port_7 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_8 port_8.cpp)
target_compile_options(port_8 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_9 port_9.cpp)
target_compile_options(port_9 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_10 port_10.cpp)
target_compile_options(port_10 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_11 port_11.cpp)
target_compile_options(port_11 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_12 port_12.cpp)
target_compile_options(port_11 PRIVATE -Wall -Wextra -pedantic)
