add_executable(port_1 port_1.cpp)
target_compile_options(port_1 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_3 port_3.cpp)
target_compile_options(port_3 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_4 port_4.cpp)
target_compile_options(port_4 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_6 port_6.cpp)
target_compile_options(port_6 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_7 port_7.cpp)
target_compile_options(port_7 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_10 port_10.cpp)
target_compile_options(port_10 PRIVATE -Wall -Wextra -pedantic)

add_executable(port_11 port_11.cpp)
target_compile_options(port_11 PRIVATE -Wall -Wextra -pedantic)
